Melhoria de Design

--- a/Programa_de_Vendas/FormVENDAS.resx
+++ b/Programa_de_Vendas/FormVENDAS.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAOwAAADsAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/8YACfm/AoT5wAHe+cAB9/nA
+        Acv4wABFAAAAAAAAAAAAAAAAAAAAAPm+AFP5wAHJ+cAB9vnAAeD5wQB7/78ABAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAL6wAG7+cAB//nA
+        Af/5wAH/+cAB//nAAf76wQBeAAAAAAAAAAD6vwBo+cAB//nAAf/5wAH/+cAB//nAAf/5wAGyAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+cEAVvnA
+        Af/5wAH/+cQQ//vOPf/5wAP/+cAB//nAAe//yAAO/8gADvnAAfL5wAH/+cAD//rPOv/5xRP/+cAB//nA
+        Af/5vgBTAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD4vwKc+cAB//nAAf/9773//vnm//zccf/5wAH/+cAB//jBAEb4wQBG+cAB//nAAf/83HP//vnm//3u
+        vP/5wAH/+cAB//jAApsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPnAAp35wAH/+cAB//3vvf/++eb/+911//nAAf/5wAH/98AAQfi/AEj5wAH/+cAB//zc
+        cv/++eb//fDC//nAAf/5wAH/+MAClgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA+cAAWfnAAf/5wAH/+cUT//vPP//5wQT/+cAB//nAAfH/uwAP/8gADvnA
+        AfX5wAH/+cEF//vOPP/6xBX/+cAB//nAAf/5wQBWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAC+cEBuPnAAf/5wAH/+cAB//nAAf/5wAH/+sAAaQAA
+        AAAAAAAA+sAAZfnAAf/5wAH/+cAB//nAAf/5wAH/+sEBvP+qAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/tgAH+cAChfnAAeH5wAH8+cAByvnB
+        AFIAAAAAAAAAAAAAAAAAAAAA+cAAUfnBAcz5wAH6+cAB4fm/AoT/zAAKAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD62mnU+s48//nOP//5zkP/+c5I//nP
+        Tf/5z1H/+M9W//jQW//40F//+NBk//fRaf/30W3/99Fy//fRd//20nv/9tKA//bShf/21Ir/992o1AAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+uKHNfrNO//5zj//+c5D//nO
+        SP/5z03/+c9R//jPVv/40Fv/+NBf//jQZP/30Wn/99Ft//fRcv/30Xf/9tJ7//bSgP/20oX/9tOJ//XT
+        jv/105P/++a7PAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD83nui+c4///nO
+        Q//5zkj/+c9N//nPUf/4z1b/+NBb//jQX//40GT/99Fp//fRbf/30XL/99F3//bSe//20oD/9tKF//bT
+        if/1047/9dOT//XUl//54rioAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPvZ
+        aOX5zkP/+c5I//nPTf/5z1H/+M9W//jQW//40F//+NBk//fRaf/30W3/99Fy//fRd//20nv/9tKA//bS
+        hf/204n/9dOO//XTk//11Jf/9dSc//fcseoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/5pkK+dFM/vnOSP/5z03/+c9R//jPVv/40Fv/+NBf//jQZP/30Wn/99Ft//fRcv/30Xf/9tJ7//bS
+        gP/20oX/9tOJ//XTjv/105P/9dSX//XUnP/11KH/9Nan//XrzBkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPriinH5zkj/+c9N//nPUf/4z1b/+NBb//jQX//40GT/99Fp//fRbf/30XL/99F3//bS
+        e//20oD/9tKF//bTif/1047/9dOT//XUl//11Jz/9dSh//TVpv/01ar/+eXEhwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA+tt6yfnPTf/5z1H/+M9W//jQW//40F//+NBk//nahf/63pb/+t6Z//re
+        nP/535//+d+i//nfpv/54Kj/+OCs//jgr//44LL/+OC1//jguP/44bz/+OG+//jhwv/4587CAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD61mT3+c9R//jPVv/40Fv/+NBf//jQZP/30Wn/++y9//75
+        5v/++eb//vnm//755v/++eb//vnm//755v/++eb//vnm//755v/++eb//vnm//755v/++eb//vnm//76
+        5un///8CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+uKQNfnPUv/4z1b/+NBb//jQX//40GT/99Fp//fR
+        bf/77L///vnm//755v/++eb//vnm//755v/++eb//vnm//755v/++eb//vnm//755v/++eb//vnm//75
+        5v/++eb//vnm///66DcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD84Imi+M9W//jQW//40F//+NBk//fR
+        af/30W3/99Fy//naj//535//+d+i//nfpv/54Kj/+OCs//jgr//44LL/+OC1//jguP/44bz/+OG+//jh
+        wv/44sX/9+LI//fiy//34s7/9ufVsgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPnZeeX40Fv/+NBf//jQ
+        ZP/30Wn/99Ft//fRcv/30Xf/9tJ7//bSgP/20oX/9tOJ//XTjv/105P/9dSX//XUnP/11KH/9NWm//TV
+        qv/01a//9Na0//PWuP/z1r3/89bC//PXxv/03c/2AAAAAAAAAAAAAAAAAAAAAAAAAAD/5rMK+NNj/vjQ
+        X//40GT/99Fp//fRbf/30XL/99F3//bSe//20oD/9tKF//bTif/1047/9dOT//XUl//11Jz/9dSh//TV
+        pv/01ar/9NWv//TWtP/z1rj/89a9//PWwv/z18b/8tfL//LX0P/25dw7AAAAAAAAAAAAAAAAAAAAAPri
+        l3H40F//+NBk//fRaf/30W3/99Fy//fRd//20nv/9tKA//bShf/204n/9dOO//XTk//11Jf/9dSc//XU
+        of/01ab/9NWq//TVr//01rT/89a4//PWvf/z1sL/89fG//LXy//y19D/8tjU//fl3acAAAAAAAAAAAAA
+        AAAAAAAA+t6JyfjQZP/30Wn/99Ft//fRcv/30Xf/9tJ7//bSgP/20oX/9tOJ//XTjv/105P/9dSX//XU
+        nP/11KH/9NWm//TVqv/01a//9Na0//PWuP/z1r3/89bC//PXxv/y18v/8tfQ//LY1P/y2Nn/9d/f6gAA
+        AAAAAAAAAAAAAAAAAAD51nf399Fp//fRbf/30XL/99F3//bSe//20oD/9tKF//bTif/1047/9dOT//XU
+        l//11Jz/9dSh//TVpv/01ar/9NWv//TWtP/z1rj/89a9//PWwv/z18b/8tfL//LX0P/y2NT/8tjZ//LY
+        3v/y2+P+AAAAAAAAAAAAAAAA+uKfNffRaf/30W3/99Fy//fRd//20nv/9tKA//bShf/204n/9dOO//XT
+        k//11Jf/9dSc//XUof/01ab/9NWq//TVr//01rT/89a4//PWvf/z1sL/89fG//LXy//y19D/8tjU//LY
+        2f/y2N7/8dri//Ti5tAAAAAAAAAAAAAAAAD64Zmi99Ft//fRcv/64qKcAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPnbiuX30XL/99F4//rgsTEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+9+Xjvrgmo764JyO99R4/vfRd//32Yz2AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD30Wn/99Ft//fRcv/30Xf/9tJ7//fe
+        oMQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPfRbv/30XL/99F3//bS
+        e//204H/+eKuTwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+uKijPrg
+        o4764KWO+uCpjvvktEEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/8DwP/+AYD//gAAf/4AAH/+AAB//gAAf/4BgH//A8D//AAAP/gAAB/4A
+        AAf+AAAH/AAAA/wAAAP8AAAD/AAAAfgAAAH4AAAB+AAAAfAAAADwAAAA8AAAAPAAAADgAAAA4f///+H/
+        //8D////A////wP///8H//////////////8=
+</value>
+  </data>
 </root>
