--- a/Programa_de_Vendas/Properties/Resources.resx
+++ b/Programa_de_Vendas/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="lupa1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lupa1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1014" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1014.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
